Entity Update: - Entity Manager - Entity Map object - Entity object
Fixed deprecation in class.newInstance():
- class.getDeclaredConstructor().newInstance replaced class.newInstance()